--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <div class="div2" id="box2" style="background-color: rgb(244, 85, 191);">Box2</div>
     <div class="div2" id="box3" style="background-color: rgb(89, 230, 112);">Box3</div>
     <div class="div2" id="box4" style="background-color: rgb(18, 200, 213);">Box4</div>
-
+    <br>
+    <hr>
+    <div id="box5">Box5</div>
+    <div id="box6">Box6</div>
+    <div id="box7">Box7</div>
 </body>
 </html>
